# WB_prac

./: HW_2_gradient.ipynb  HW_SQL_1.ipynb  HW_matrixvectors.ipynb  homework3.ipynb  pyproject.toml  python_homework2.ipynb  sql_2.ipynb  sql_2.sql  sql_4.sql  sql_5.sql
.ipynb_checkpoints/: 1-checkpoint.ipynb  HW_SQL_1-checkpoint.ipynb
